More findbugs fixes